Bug 1179250 - Make implementation of GetInterface return NS_ERROR_NO_INTERFACE on error.r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D68607