netwerk/protocol/websocket/WebSocketChannel.cpp
@@ -3031,7 +3031,7 @@ WebSocketChannel::GetInterface(const nsIID& iid, void** result) {
 
   if (mCallbacks) return mCallbacks->GetInterface(iid, result);
 
-  return NS_ERROR_FAILURE;
+  return NS_ERROR_NO_INTERFACE;
 }
 
 // nsIChannelEventSink
